<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/b_deletePerson">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_newPerson_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_newPerson_header"
                android:textAlignment="center"
                android:textSize="@dimen/textSize_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_newPerson_name_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="@dimen/margin_small"
                app:layout_constraintTop_toBottomOf="@id/tv_newPerson_header">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_newPerson_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/newPerson_nameInputHint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_newPerson_birth_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="@dimen/margin_small"
                app:layout_constraintTop_toBottomOf="@id/til_newPerson_name_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_newPerson_birth_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/newPerson_birthInputHint"
                    android:inputType="date"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_newPerson_death_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="@dimen/margin_small"
                app:layout_constraintTop_toBottomOf="@id/til_newPerson_birth_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_newPerson_death_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/newPerson_deathInputHint"
                    android:inputType="date"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_newPerson_imageLink_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="@dimen/margin_small"
                app:layout_constraintTop_toBottomOf="@id/til_newPerson_death_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_newPerson_imageLink_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/newPerson_imageLinkInputHint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_newPerson_description_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="@dimen/margin_small"
                app:layout_constraintTop_toBottomOf="@id/til_newPerson_imageLink_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_newPerson_description_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textMultiLine"
                    android:maxLines="10"
                    android:scrollbars="vertical"
                    android:hint="@string/newPerson_descriptionInputHint"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_newPerson_quotes_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="@dimen/margin_small"
                app:layout_constraintTop_toBottomOf="@id/til_newPerson_description_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_newPerson_quotes_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textMultiLine"
                    android:maxLines="10"
                    android:scrollbars="vertical"
                    android:hint="@string/newPerson_quotesInputHint"/>
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/b_deletePerson"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/b_newPerson_save"
        android:layout_margin="@dimen/margin_small"
        android:text="@string/deletePerson_Text"/>

    <Button
        android:id="@+id/b_newPerson_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/margin_small"
        android:text="@string/newPerson_saveText"/>
</androidx.constraintlayout.widget.ConstraintLayout>